Implemented aside block with menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<app-left-sidebar></app-left-sidebar>
+<div id="root-wrapper">
+  <app-left-sidebar></app-left-sidebar>
 
-<main>
-  <router-outlet></router-outlet>
-</main>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+</div>
