--- a/src/app/left-sidebar/left-sidebar.component.html
+++ b/src/app/left-sidebar/left-sidebar.component.html
@@ -1,3 +1,8 @@
-<aside *ngIf="!hide">
-  <p>left-sidebar works!</p>
+<aside id="left-sidebar" *ngIf="!hide">
+  <h3 class="headline">Hairizma</h3>
+  <ul class="menu">
+    <li><a class="menu-item">Products</a></li>
+    <li><a class="menu-item">Categories</a></li>
+    <li><a class="menu-item">Orders</a></li>
+  </ul>
 </aside>
