Added stub products list

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,1 +1,24 @@
-<p>products works!</p>
+<div class="card">
+  <div class="card-header">Table is just a mapping of objects to table rows with</div>
+
+  <div class="card-body">
+    <table class="table table-striped">
+      <thead>
+      <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Description</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let product of products; index as i">
+        <td>
+          {{ product.name }}
+        </td>
+        <td>
+          {{ product.description }}
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
